nosher2.css
/* ... */
archivedescription .year {
    font-weight: bold;
    color: #707070;
    margin: 0;
    font-size: 90%;
}

archivedescription .title {
    font-weight: bold;
    color: #202020;
    margin: 4px 0 0 0;
}

archivedescription .summary {
    font-size: 90%;
    margin: 4px 0 0 0;
}

archivedescription h3 {
    margin: 4px 0 0 0 !important;
    padding: 0;
}

.archives {
    margin: 0;
}
.noul:hover, .noul {
    text-decoration: none;
}

@media screen and (max-width: 840px) {
    archiveitem {
        grid-template-columns: 80px auto;
        grid-template-rows: auto 8px;
        font-size: 80%;
    }
    archivethumb {
        margin: 4px 0 0 8px;
        width: 75px;
    }
    archivedescription .year {
        margin: 0 !important;
        padding: 0 !important;
    }
    archivedescription .title {
        margin: 0 !important;
        padding: 0 !important;
    }
    archivedescription .summary {
        margin: 0 !important;
    }
    archivedescription h3 {
        margin: 0 !important;
    }
    .archives {
        margin: 12px 0 0 0;
    }
}

.svg {
    width: 860px;
    height:900px;
    border: 1px solid #555;
    margin: 8px 0 24px 0;
}

.advert {
    color: #303030;
    color: #333;
    padding: 0;
    margin: 0;
    max-width: 800px;
}

.advert img {
    border: 1px solid #505050;
    margin: 0 0 22px 0;
    box-shadow: 3px 3px 6px #888888;
    width: 95%;
}

img.ad {
    border: 0;
    margin: 0;
    box-shadow: none;
    width: 700px;
    align: left;
    display: block;
} 
div.zoomer {
    border: 1px solid #505050;
    margin: 0 0 22px 0;
    box-shadow: 3px 3px 6px #888888;
    width: 700px;
    overflow: hidden;
    padding: 0;
    margin: 0;
}
div.magicon {
    margin-top: 8px;
    display: none;
}


@media screen and (max-width: 840px) {
        img.ad {
            width: 96% !important;
        } 
}

.advert h3 {
    margin: 28px 0 8px 0;
    width: 98%;
}

.advert a:link {
    color: #0033aa;
}
.adlist li {
    margin-bottom: 24px;
}

.nav a:link, .navbottom a:link, .nav a:visited, .navbottom a:visited, archivedescription a:link > *, archivedescription a:visited > * {
    color: #444;
}

.liner {
    padding-right: 16px;
}

.liner p {
    margin: 0 0 16px 0;
}

.origins {
    font-weight: bold;
    background-color: #c4d6db;
    padding: 12px;
    font-family: "Roboto Light";
}

@media screen and (max-width: 840px) {
    .advert {
        text-align: left;
    }
    .advert img {
        width: 95.2%;
        margin: 0 8px 0 8px;
        box-shadow: unset;
        box-sizing: border-box;
    }
    .advert p {
        margin: 0 4px 16px 8px;
    }
    .advert p.nav {
        margin: 0;
    }
    .advert h3, .advert h2 {
        margin: 8px 4px 8px 8px;
    }
    .liner {
        padding: 0;
        width: 97%;
    }
}

p.navlink {
    font-size: 80%;
    line-height: 1.3;
    font-family: 'SegoeUILight';
    margin-top: 8px;
}

@media screen and (max-width: 840px) {
    p.navlink {
        font-size: 100%;
        line-height: 1.5;
        margin: 0;
        padding: 0;
    }
}

p.navlink a, p.navlink a span {
    color: #202020 !important;
    text-decoration: none !important;
}

p.navlink a span {
    color: #505050 !important;
}

.copy {
    margin-top: 1em;
    color: #606060;
    font-size: 80%;
    max-width: 800px;
}

@media screen and (max-width: 840px) {
    .copy {
        margin: 12px 4px 12px 8px;
    }
}

.sources {
    font-size: 85%;
    display: grid;
    grid-template-rows: auto;
    row-gap: 4px;
}

.source {
    display: grid;
    grid-template-columns: 24px auto;
    grid-template-areas: "sourcepos sourcetext"
}

sup.src a {
    color: #940;
}

.sourcepos {
    color: #303030;
    grid-area: sourcepos;
}

.sourcetext {
    color: #808080;
    grid-area: sourcetext;
}

sup.src {
    font-family: georgia, arial, helvetica;
    vertical-align: baseline;
    position: relative;
    top: -0.6em;
    color: #940;
    font-size: 9pt;
    margin-left: 0.1em;
    margin-right: 0.1em;
}

@media screen and (max-width: 840px) {
    .sources {
        margin: 0 4px;
    }
    .sourcepos {
        padding-left: 4px;
    }
}

.extra, .extra_left {
    padding: 8px;
    background: #f0f0f0;
    text-align: left;
    font-size: 80%;
    font-weight: normal;
    box-shadow: 2px 6px 8px #dddddd;
}

.extra img, .extra_left img {
    width: 100% !important;
    border: unset;
    box-shadow: unset;
}

.extra {
    margin: 0 0 10px 30px;
}

.extra_left {
    margin: 0 30px 10px 0;
    border: unset;
}

img.crest {
    width: 200px;
    float: left;
    border: unset;
    box-shadow: unset;
    margin: 0 1em 0 0;
}

@media screen and (max-width: 840px) {
    .extra, .extra_left {
        display: block;
        float: none !important;
        width: 100% !important;
        margin: 8px 0;
        padding: 8px;
        border-radius: 0;
        box-shadow: none;
        box-sizing: border-box;
        text-align: center;
        font-size: 80%;
        clear: both;
    }
    .extra img, .extra_left img {
        display: block;
        width: 60% !important;
        border-radius: 0;
        margin: 0 auto;
        clear: both !important;
    }
}

.sourcetext a {
    color: #808080;
}

.saxon {
    margin-right: 8px;
}

.saxon tr td {
    padding: 0 4px 20px 0;
    vertical-align: top;
}

.content {
    width: 99%;
}

@media screen and (max-width: 840px) {
    .content p {
        text-align: left;
    }
}

.shlinx li {
    margin-bottom: 8px;
}

.content_medium, .content_large {
    background-color: #fff;
    border: 1px solid #333;
    box-shadow: 2px 6px 8px #aaaaaa;
    padding: 8px;
    font-size: 80%;
    color: #444;
    text-align: center;
}

.content_medium {
    width: 300px;
}

.content_large {
    width: 360px;
}

.content_large img, .content_medium img {
    border: unset;
    box-shadow: unset;
}

.left {
    margin: 4px 12px 8px 0;
    float: left;
}

.right {
    margin: 4px 2px 8px 12px;
    float: right;
}
/* ... */

